[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "continuous-profiler"
version = "0.1.0"
description = "Continuous perf profiling helpers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
]

[project.scripts]
continuous-profiler = "continuous_profiler.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

